recursion.cons.lessons.recursion.cons.Last.scala.error
last:3: error: type mismatch;
 found   : Int
 required: List[Int]
	return last(l.tail.head);
                           ^